--- a/assets/style/style.css
+++ b/assets/style/style.css
@@ -5,6 +5,16 @@ body {
 
 	
 }
+.overlay{
+  display: none;
+  position: fixed;
+  width: 100%;
+  height: 100%;
+  top: 0;
+  left: 0;
+  z-index: 999;
+  background: rgba(255,255,255,0.8) url("loader.gif") center no-repeat;
+}
 img{
   width: 100%;
   margin-left: auto;
